--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ Flask-WTF==1.2.1
 email-validator==2.2.0
 flask-jwt-extended==4.6.0
 python-dotenv==1.0.1
-psycopg[binary]==3.1.19
-gunicorn==21.2.0 
+psycopg2-binary==2.9.9
+gunicorn==21.2.0
