--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,306 @@
-Flask==3.0.0
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.7
+absl-py==2.1.0
+accelerate==1.0.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+alembic==1.14.1
+amqp==5.3.1
+anyascii==0.3.2
+appdirs==1.4.4
+apturl==0.5.2
+asgiref==3.8.1
+astunparse==1.6.3
+async-timeout==5.0.1
+attrs==19.3.0
+audioread==3.0.1
+babel==2.16.0
+backports.zoneinfo==0.2.1
+bangla==0.0.2
+bcrypt==3.1.7
+beautifulsoup4==4.13.4
+billiard==4.2.1
+blinker==1.8.2
+bnnumerizer==0.0.2
+bnunicodenormalizer==0.1.1
+Brlapi==0.7.0
+cached-property==1.5.1
+cachetools==5.5.0
+celery==5.3.1
+certifi==2025.1.31
+cffi==1.17.1
+chardet==3.0.4
+charset-normalizer==3.4.1
+clean-fid==0.1.35
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+clip-anytorch==2.6.0
+colorama==0.4.3
+command-not-found==0.3
+contourpy==1.1.1
+coqpit==0.0.17
+cryptography==44.0.1
+cupshelpers==1.0
+curl-cffi==0.9.0
+cycler==0.12.1
+Cython==0.29.28
+dateparser==1.1.8
+dbus-python==1.2.16
+dctorch==0.1.2
+decorator==4.4.2
+defer==1.0.6
+defusedxml==0.7.1
+distro==1.4.0
+distro-info==0.23+ubuntu1.1
+dj-database-url==1.3.0
+Django==4.2
+django-allauth==0.57.0
+django-cors-headers==4.4.0
+django-jazzmin==3.0.1
+django-unfold==0.46.0
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+docker==4.1.0
+docker-compose==1.25.0
+docker-pycreds==0.4.0
+dockerpty==0.4.1
+docopt==0.6.2
+docx==0.2.4
+duplicity==0.8.12.0
+einops==0.8.0
+entrypoints==0.3
+fasteners==0.14.1
+filelock==3.16.1
+flask==3.0.3
+Flask-Cors==5.0.0
+Flask-JWT-Extended==4.6.0
 Flask-Login==0.6.3
-Flask-WTF==1.2.1
-email-validator==2.2.0
-flask-jwt-extended==4.6.0
-python-dotenv==1.0.1
-psycopg2-binary==2.9.9
-gunicorn==21.2.0
+Flask-Migrate==4.1.0
+flask-sqlalchemy==3.1.1
+flask-wtf==1.2.1
+flatbuffers==1.12
+fonttools==4.54.1
+frozendict==2.4.6
+frozenlist==1.5.0
+fsspec==2024.10.0
+ftfy==6.2.3
+future==1.0.0
+g2pkk==0.1.2
+gast==0.4.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+greenlet==3.1.1
+grpcio==1.67.0
+gruut==2.2.3
+gruut-ipa==0.13.0
+gruut-lang-de==2.0.1
+gruut-lang-en==2.0.1
+gruut-lang-es==2.0.1
+gruut-lang-fr==2.0.2
+gTTS==2.5.3
+gunicorn==23.0.0
+h11==0.9.0
+h5py==3.11.0
+httplib2==0.14.0
+huggingface-hub==0.26.2
+idna==3.10
+imageio==2.35.1
+imageio-ffmpeg==0.5.1
+importlib-metadata==8.5.0
+importlib-resources==6.4.5
+inflect==5.6.0
+itsdangerous==2.2.0
+jamo==0.4.1
+jieba==0.42.1
+jinja2==3.1.4
+joblib==1.4.2
+jsonlines==1.2.0
+jsonmerge==1.9.2
+jsonschema==3.2.0
+k-diffusion==0.1.1.post1
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+keyring==18.0.1
+kiwisolver==1.4.7
+kombu==5.4.2
+kornia==0.7.3
+kornia-rs==0.1.7
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lazy-loader==0.4
+libclang==18.1.1
+librosa==0.10.0.post2
+llvmlite==0.38.1
+lockfile==0.12.2
+louis==3.12.0
+lxml==5.3.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+Markdown==3.7
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+mecab-python3==1.0.5
+monotonic==1.5
+more-itertools==4.2.0
+moviepy==1.0.3
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.1.0
+multitasking==0.0.11
+netifaces==0.10.4
+networkx==3.1
+nltk==3.9.1
+num2words==0.5.13
+numba==0.55.1
+numpy==1.21.6
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.77
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.2
+olefile==0.46
+openai-whisper==20240930
+opencv-python==4.2.0.32
+opt-einsum==3.4.0
+packaging==24.2
+pandas==2.0.3
+paramiko==2.6.0
+peewee==3.18.1
+pexpect==4.6.0
+pillow==10.4.0
+platformdirs==4.3.6
+pooch==1.6.0
+proglog==0.1.10
+prompt-toolkit==3.0.50
+propcache==0.2.0
+protobuf==3.19.6
+psutil==6.1.0
+psycopg2-binary==2.9.6
+pyasn1==0.6.1
+pyasn1-modules==0.4.1
+PyAudio==0.2.11
+pycairo==1.16.2
+pycparser==2.22
+pycups==1.9.73
+pydub==0.25.1
+pygame==2.6.1
+PyGObject==3.36.0
+pyjokes==0.6.0
+PyJWT==2.9.0
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pynndescent==0.5.13
+pyparsing==3.1.4
+pypdf2==3.0.1
+pypinyin==0.53.0
+pyRFC3339==1.1
+pyrsistent==0.15.5
+pysbd==0.3.4
+python-apt==2.0.1+ubuntu0.20.4.1
+python-crfsuite==0.9.11
+python-dateutil==2.9.0.post0
+python-debian==0.1.36+ubuntu1.1
+python-decouple==3.8
+python-docx==1.1.2
+python-dotenv==1.0.0
+python-facebook-api==0.4.0
+python3-openid==3.2.0
+pyttsx3==2.98
+pytz==2024.2
+PyWavelets==1.4.1
+pyxdg==0.26
+PyYAML==5.3.1
+redis==4.5.5
+regex==2024.9.11
+reportlab==3.5.34
+requests==2.32.3
+requests-oauthlib==1.3.1
+requests-unixsocket==0.2.0
+rsa==4.9
+safetensors==0.4.5
+scikit-image==0.21.0
+scikit-learn==1.3.2
+scipy==1.10.1
+SecretStorage==2.3.1
+sentry-sdk==2.17.0
+setproctitle==1.3.3
+simplejson==3.16.0
+six==1.17.0
+smmap==5.0.1
+soundfile==0.12.1
+soupsieve==2.7
+soxr==0.3.7
+SpeechRecognition==3.10.4
+sqlalchemy==2.0.43
+sqlparse==0.5.3
+ssh-import-id==5.10
+swisseph==0.0.0.dev1
+sympy==1.13.3
+systemd-python==234
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorboardX==2.6.2.2
+tensorflow==2.9.3
+tensorflow-cpu==2.13.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==2.4.0
+texttable==1.6.2
+threadpoolctl==3.5.0
+tifffile==2023.7.10
+tiktoken==0.7.0
+tokenizers==0.20.1
+torch==2.4.1
+torchaudio==2.4.1
+torchdiffeq==0.2.4
+torchsde==0.2.6
+torchvision==0.19.1
+tqdm==4.66.6
+trainer==0.0.20
+trampoline==0.1.2
+transformers==4.46.1
+triton==3.0.0
+TTS==0.14.3
+tweepy==4.14.0
+typing-extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.2
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36
+umap-learn==0.5.1
+unattended-upgrades==0.1
+unidic-lite==1.0.8
+urllib3==2.2.3
+usb-creator==0.3.7
+uvicorn==0.11.3
+vine==5.1.0
+wadllib==1.3.3
+wandb==0.18.5
+wcwidth==0.2.13
+websocket-client==0.53.0
+websockets==13.1
+werkzeug==3.0.4
+whitenoise==6.7.0
+wrapt==1.16.0
+wsproto==0.15.0
+wtforms==3.1.2
+xkit==0.0.0
+yarl==1.15.2
+yfinance==0.2.61
+zipp==3.20.2
